# atomvm_adc

./: CMakeLists.txt  Kconfig
examples/adc_nif_example/: README.md  rebar.config
examples/adc_nif_example/src/: adc_nif_example.app.src  adc_nif_example.erl
nifs/: atomvm_adc.c
src/: adc.erl
